reorders tasks
