# models/task.js
@@ -55,7 +55,7 @@ const moveTaskSchema = Joi.object({
   column: Joi.string()
     .regex(/^[0-9a-fA-F]{24}$/)
     .required(),
-  order: Joi.number(),
+  newOrder: Joi.number(),
 });
 
 const taskSchemas = {
